fix rebase errors part 2